perceptions almost done

--- a/perceptions.ipynb
+++ b/perceptions.ipynb
@@ -14,12 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://github.com/ultralytics/assets/releases/download/v0.0.0/yolov8s.pt to 'yolov8s.pt'...\n",
+      "100%|██████████| 21.5M/21.5M [00:01<00:00, 19.9MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Load a model\n",
-    "model = YOLO('yolov5su.pt')  # pretrained YOLOv8n model"
+    "model = YOLO('yolov8s.pt')  # pretrained YOLOv8n model"
    ]
   },
   {
